fix(UI): fix carousal from being too wide and add grab cursor
made carousal to function from being unusable and looking buggy
by simply adding max-width to the body

the active:cursor-progress isn't working on firefox but it works on brave

--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,5 @@
 
 body {
   margin: 0;
-  display: flex;
+  max-width: 105rem;
 }
